# sw_raytracer

./: CMakeLists.txt  readme.md
src/: AcceleratedScene.h  BasicScene.h  Color.h  Geometry.h  Object.h  ParallelRendering.h  Rendering.h  SDLScreen.h  SDLWindow.h  SWScreen.h  ThreadPool.h  Vec.h  main.cpp
